rust_writer_procedural/tests/ui/compile_fail/impl_mutator_fails_if_not_applied_to_struct.stderr
error: expected `struct`
 --> tests/ui/compile_fail/impl_mutator_fails_if_not_applied_to_struct.rs:6:1
  |
6 | enum SomeStruct {
  | ^^^^
